crates/squealy/tests/compile_fail/update_from_requires_correlation.stderr
error[E0599]: no method named `build` found for struct `UpdateFromBuilder<'_, TestConnection, Counter<'_>, Post<'_>, HCons<squealy::UpdateAssignment<CounterCount, squealy::ExprAssignmentValue<'_, PostUserId, squealy::ColumnExprAst<PostUserId>>>, HNil>>` in the current scope
  --> tests/compile_fail/update_from_requires_correlation.rs:27:10
   |
23 |       let _query = conn
   |  __________________-
24 | |         .to_columns::<Counter, (CounterCount,)>()
25 | |         .from::<Post>()
26 | |         .set(|(_counter, post)| (post.user_id,))
27 | |         .build();
   | |         -^^^^^ this is an associated function, not a method
   | |_________|
   |
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
note: candidate #1 is defined in the trait `squealy::DeleteQuery`
  --> src/query.rs
   |
   | /     fn build(
   | |         builder: &'builder Self::Builder,
   | |         alias: SourceAlias,
   | |         filters: Filters,
...  |
   | |     where
   | |         Self: Sized;
   | |____________________^
note: candidate #2 is defined in the trait `squealy::InsertQuery`
  --> src/query.rs
   |
   | /     fn build(builder: &'builder Self::Builder, rows: Rows, returning: Returning) -> Self
   | |     where
   | |         Self: Sized;
   | |____________________^
note: candidate #3 is defined in the trait `squealy::UpdateFromQuery`
  --> src/query.rs
   |
   | /     fn build(
   | |         builder: &'builder Self::Builder,
   | |         target_alias: SourceAlias,
   | |         source_alias: SourceAlias,
...  |
   | |     where
   | |         Self: Sized;
   | |____________________^
note: candidate #4 is defined in the trait `squealy::UpdateQuery`
  --> src/query.rs
   |
   | /     fn build(
   | |         builder: &'builder Self::Builder,
   | |         alias: SourceAlias,
   | |         columns: Columns,
...  |
   | |     where
   | |         Self: Sized;
   | |____________________^
help: disambiguate the associated function for candidate #1
   |
23 -     let _query = conn
24 -         .to_columns::<Counter, (CounterCount,)>()
25 -         .from::<Post>()
26 -         .set(|(_counter, post)| (post.user_id,))
27 -         .build();
23 +     let _query = <UpdateFromBuilder<'_, TestConnection, Counter<'_>, Post<'_>, HCons<squealy::UpdateAssignment<CounterCount, squealy::ExprAssignmentValue<'_, PostUserId, squealy::ColumnExprAst<PostUserId>>>, HNil>> as squealy::DeleteQuery>::build(&);
   |
help: disambiguate the associated function for candidate #2
   |
23 -     let _query = conn
24 -         .to_columns::<Counter, (CounterCount,)>()
25 -         .from::<Post>()
26 -         .set(|(_counter, post)| (post.user_id,))
27 -         .build();
23 +     let _query = <UpdateFromBuilder<'_, TestConnection, Counter<'_>, Post<'_>, HCons<squealy::UpdateAssignment<CounterCount, squealy::ExprAssignmentValue<'_, PostUserId, squealy::ColumnExprAst<PostUserId>>>, HNil>> as squealy::InsertQuery>::build(&);
   |
help: disambiguate the associated function for candidate #3
   |
23 -     let _query = conn
24 -         .to_columns::<Counter, (CounterCount,)>()
25 -         .from::<Post>()
26 -         .set(|(_counter, post)| (post.user_id,))
27 -         .build();
23 +     let _query = <UpdateFromBuilder<'_, TestConnection, Counter<'_>, Post<'_>, HCons<squealy::UpdateAssignment<CounterCount, squealy::ExprAssignmentValue<'_, PostUserId, squealy::ColumnExprAst<PostUserId>>>, HNil>> as squealy::UpdateFromQuery>::build(&);
   |
help: disambiguate the associated function for candidate #4
   |
23 -     let _query = conn
24 -         .to_columns::<Counter, (CounterCount,)>()
25 -         .from::<Post>()
26 -         .set(|(_counter, post)| (post.user_id,))
27 -         .build();
23 +     let _query = <UpdateFromBuilder<'_, TestConnection, Counter<'_>, Post<'_>, HCons<squealy::UpdateAssignment<CounterCount, squealy::ExprAssignmentValue<'_, PostUserId, squealy::ColumnExprAst<PostUserId>>>, HNil>> as squealy::UpdateQuery>::build(&);
   |
